change the colors and style

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Document</title>
 </head>
 <body></body>
-    <h1>Asad News Page</h1>
+    <h1 class="title">Asad <span id="titleNews">News</span>  Page</h1>
     <div class="search">
         <input class="search-input" id="search" type="text" placeholder="search article">
         <input type="button" class="btn"value="Search">
     </div>
     <ul class="nav">
-        <li class="popular-article">Popular articles</li>
-        <li class="movie-reviews">Movie reviews</li>
+        <li class="liItem popular-article">Popular articles</li>
+        <li class="liItem movie-reviews">Movie reviews</li>
     </ul>
     <div class="mostPopular">
        
